# hasu-stamina-calc

./: Dockerfile  Procfile  README.md  pyproject.toml
src/hasu_stamina_calc/: __init__.py  app.py
